# africa-oracle-agent

./: .gitignore  AFRI_Blueprint.md  AFRI_Blueprint_v01.md  CLAUDE.md  DEPLOY.md  Dockerfile  EVAL_REPORT.md  README.md  SOVEREIGNTY.md  afri-bridge.sh  afri-deploy.sh  afri-token.fc  docker-compose.yml  fly.toml  oracle_agent.go  oracle_agent.py  oracle_agent.sh  vercel.json
.github/workflows/: ci.yml
api/: app.py
sdk/: README.md  build.sh
sdk/extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
sdk/installer/: install.sh
sdk/pwa/: README.md  app.js  index.html  manifest.webmanifest  sw.js
sdk/python/: README.md  pyproject.toml
sdk/python/africa_oracle/: __init__.py  cli.py  client.py  skill.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
sdk/vscode/: README.md  extension.js  package.json
skills/: africa-oracle-devflow.md
tests/: run_func_tests.sh  test_afri_token_funcs.fc  test_oracle.py  test_sdk.py
